# BCor

./: .codemap.yml  .coverage  .flake8  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ru.md  Conceptdock  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_ru.md  README.md  check_db.py  check_hang.py  debug_collection.py  debug_inheritance.py  docker-compose.agm.yml  firststeps.md  mypy_final_2.txt  pyproject.toml  repro_load_error.py  ruff_errors.txt  ruff_errors_v2.txt  ruff_errors_v3.txt  ruff_errors_v4.txt  ruff_errors_v5.txt  ruff_final.txt  ruff_final_2.txt  skills-lock.json  test_handlers_output.txt  test_hash.py  test_log.txt  test_out.txt  test_output.txt  test_output_2.txt  test_output_v5.txt  test_output_v6.txt  test_playwright.py  test_registry.py  test_results.py  test_results2.py  (+3 more)
.agents/skills/bcor-expert/: SKILL.md
.agents/skills/codemap/: SKILL.md
.audit/20260329-042410/: pip-check.txt
.audit/20260329-042458/: pip-check.txt
.audit/20260329-042539/: install-pytest-cov.txt
.audit/20260329-042919/: install-tools.txt  mypy.txt  pip-check.txt
.audit/20260329-043903/: install-cov.txt
.audit/20260329-044703/: pip-check.txt  pytest-results.xml
.audit/20260329-044742/: install-coverage.txt
.audit/20260329-045240/: ensurepip.txt  mypy.txt  pip-upgrade.txt
.audit/20260329-050859/: mypy-filtered.txt  pytest-results-filtered.xml
.audit/20260329-050933/: mypy-filtered.txt  pytest-output-filtered.txt
Ddocks/: Class map.md  Conceptdock.md  Dizdok.md  Roadmap.md  Specification.md  TECH_DEBT_REGISTRY.md  Tech tasck.md  agm_dock.md  assets_dock.md  ecs_dock.md  orders_dock.md  vfs_dock.md
Ddocks/ADR/: ADR-experimental-quarantine.md
Ddocks/Design_docks/: Class map.md  Conceptdock.md  Dizdok.md  Foundation_Skills_Insights.md  Foundation_Template_Insights.md  Intercore_Insights.md  README_NOTICE.md  Roadmap.md  boruscraper_porting_protocol.md  constitution.md  experimental_porting_generic_plan.md  porting_report.md
Ddocks/Design_docks/ADR/: 0001-strangler-fig-bcor-integration.md  0002-domain-core-design.md  0003-infrastructure-adapters.md  0004-code-layering-strategy.md  0005-uv-package-management.md  0006-python-3.12-syntax.md  0007-legacy-migration-acl-strategy.md  0007-shared-common-library.md  0008-async-native-common-layer.md  0008-ml-infrastructure-and-metadata.md  0009-heavy-dependency-handling.md  0010-code-as-doc.md
Ddocks/Design_docks/devlog/: 2026-03-21_image_dedup_migration_fix.md  2026-03-21_llm_module_stabilization.md  2026-03-21_vision_and_scraper_porting.md
Ddocks/Design_docks/specs/: 2026-03-19-legacy-import-map.md  2026-03-19-linting-strategy.md  2026-03-29-asset-explorer-app-design.md  monorepo-audit-template.md  monorepo-backlog.md  monorepo-inventory.md  monorepo-roadmap.md
Ddocks/How-tos/: Add_New_Module.md
docks/BCor-reverse/: 01-surface-scan.html  02-entity-model.html  03-api-surface.html  04-frontend-flow.html  05-uiux-desktop-gui.html  06-data-pipeline.html  07-feature-analysis.html  08-documentation-audit.html  09-web-research.html  10-architecture.html  11-project-critique.html  12-knowledge-gained.html  13-swot-debt-roadmap.html  14-final-map.html  index.html
docs/explanation/: agm.md  architecture.md  event-sourcing.md
docs/how-to/: add-adapter.md  create-module.md  write-tests.md
docs/reference/: adapters.md  core-api.md  module-api.md
docs/tutorials/: quickstart.md
legacy/imgededupe/: app.toml  main.py  module.py  settings.py
legacy/imgededupe/application/: messages.py
src/adapters/: orm.py  repository.py  taskiq_broker.py  taskiq_local_monitor.py  unit_of_work.py
src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/apps/: README.md  __init__.py
src/common/: README.md  __init__.py  asyncio_utils.py  concurrency.py  formatters.py  hashing.py  monads.py  paths.py  progress.py  undo.py
src/core/: bridge.py  decorators.py  discovery.py  domain.py  loop_policies.py  messagebus.py  messages.py  module.py  monads.py  repository.py  storage.py  system.py  testing.py  unit_of_work.py
src/modules/: __init__.py
src/porting/: README.md  __init__.py  async_utils.py  porting.py  repository_utils.py  testing_utils.py  ui_bridge.py
tests/: conftest.py  debug_ollama_timing.py  regression_output.txt  regression_traceback.txt  repro_phash.py
tests/e2e/: test_ui_bootstrap.py  test_ui_flow.py
tests/integration/: test_10x_robust_pipeline.py  test_action_bridge.py  test_agm_grouping_tdd.py  test_agm_overrides_tdd.py  test_agm_schema_auto.py  test_allocator_bridge.py  test_asset_explorer_logic.py  test_ddsearch.py  test_deep_wipe.py  test_diagnostic_light.py  test_handlers_and_tracking.py  test_handlers_full.py  test_idempotency.py  test_image_analyze_infra.py  test_image_asset_full_verification.py  test_image_dedup.py  test_legacy_batch_engine.py  test_llm_module.py  test_metadata_evolution_full.py  test_metadata_regression.py  test_mongo_adapter.py  test_neo4j_batch.py  test_orm.py  test_repository.py  test_scraper_module.py  test_search_module.py  test_smart_exif.py  test_thumbnail.py  test_ultra_diagnostic.py  test_ultra_pipeline.py  test_uow.py  test_vfs_sample.py  verify_image_analyze_module.py  verify_image_graph_module.py
tests/unit/: test_agm_mapper.py  test_agm_query_advanced.py  test_analytics_module.py  test_coverage_gap.py  test_discovery.py  test_duckduckgo_adapter.py  test_ecs_module.py  test_gemini_adapter.py  test_image_analyze_domain.py  test_lifecycle.py  test_llm_handlers.py  test_messagebus.py  test_nlp_pipeline.py  test_orders_module.py  test_unified_config.py  test_vfs_module.py
tools/: find_missing_app_tests.py  generate_inventory.py
vfs_data/: hello_vfs.txt
(+740 files in other folders)
