[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b11",
    "bubus>=1.5.6",
    "dishka>=1.9.1",
    "fs>=2.4.16",
    "loguru>=0.7.3",
    "neo4j>=6.1.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "returns>=0.26.0",
    "sqlalchemy>=2.0.48",
    "taskiq>=0.12.1",
    "taskiq-nats>=0.6.0",
    "tenacity>=9.1.4",
]
